[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/avail",
    "primitives",
    "runtime",
]
resolver = "2"

[profile.release]
panic = "unwind"

[workspace.package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>", "Magport/Substrate-Rollup team"]
edition = "2021"
license = "Apache License 2.0"
repository = "https://github.com/Magport/Substrate-Rollup"
