[package]
name = "primitives-avail"
authors.workspace = true
edition.workspace = true
license = "Unlicense"
version = "0.0.1"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"], default-features = false }

sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime = { version = "24.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
async-trait = { version = "0.1.57", optional = true }
scale-info = { version = "2.1.1", default-features = false }
[features]
default = [ "std" ]
std = [
	"async-trait",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-inherents/std",
	"scale-info/std",
	"sp-api/std",
]